--- a/Module 3/Monte Carlo Integration.Rmd
+++ b/Module 3/Monte Carlo Integration.Rmd
@@ -23,12 +23,54 @@ Topics to be covered:
 
 ## Monte Carlo Integration
 
-Given a function $g(x)$ for which we wish to integrate over [a,b], $\int_a^b g(x) dx$, we can treat this deterministic problem as a stochastic one to find the solution. Treat X as if a random variable with density $f(x)$, then the mathimatical expecation of the random variable $Y = g(X)$ is 
+Given a function $g(x)$ for which we wish to integrate over [a,b], $\int_a^b g(x) dx$, we can treat this deterministic problem as a stochastic one to find the solution. Treat $X$ as if a random variable with density $f(x)$, then the mathimatical expecation of the random variable $Y = g(X)$ is
 $$
-E[g(X)] = \int_{- \infty}^{\infty} g(x) f(x) dx
+E[g(X)] = \int_{\mathcal{X}} g(x) f(x) dx
 $$
 
 If a random sample $X_1, ..., X_n$ is generated from $f(x)$, an unbiased estimator of $E[g(X)]$ is the sample mean.
+
+$$
+\bar{g_n} = \frac{1}{n} \displaystyle\sum_{i=1}^{n} g(x_i)
+$$
+
+
+As an example, suppose we have a function $g(x) = 3x^2$ for which we wish to integrate over the interval 0 to 2. We could apply deterministic numerical approximation methods (see R's `integrate`) or we could treat $x$ as a random variable from a $Unif(0,2)$ whose pdf is simply $f(x) = \frac{1}{2-0} = \frac{1}{2}$. If we now generate some $N =$ 1,000 random values from $f(x)$ and evaluate them at $g(x)$, then take the mean, we'd be calculating the expected value of $g(x)$, 
+$$
+\mathcal{v} =  \int_0^2 g(x) dx \\
+\\= (\frac{2 - 0}{2 - 0}) \times \int_0^2 g(x) dx \\
+\\= 2 \times \int_0^2 g(x) \frac{1}{2} dx \\
+\\= 2 \times E[g(X)] = 2 \times \int_{- \infty}^{\infty} g(x) f(x) dx \\
+\\ \approx  2 \times \frac{1}{n} \displaystyle\sum_{i=1}^{n} g(x_i) \approx v
+$$
+
+If we now simulate this, we will see we approximate the true solution $\int_0^2g(x) dx = 8$
+
+```{r}
+N = 10000 ## sample size
+
+g <- function(x) { 3*x^2 } ## function of interest, g(x)
+
+X <- runif(n = N, min = 0, max = 2)  ## samples from f(x)
+
+v = 2 * mean(g(X)) ## 2 * E[g(x)]
+
+print(v) ## approximately 8
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
