--- a/Module 3/Monte Carlo Integration.Rmd
+++ b/Module 3/Monte Carlo Integration.Rmd
@@ -120,6 +120,49 @@ $$
 $$
 
 
+We can now calculate the standard error for the former example.
+
+
+```{r}
+N = 10000 ## sample size
+
+g <- function(x) { 3*x^2 } ## function of interest, g(x)
+
+X <- runif(n = N, min = 0, max = 2)  ## samples from f(x)
+g_values <- 2 * g(X)
+
+cumMean <- function(x, n){
+  num = cumsum(x)
+  denom = 1:n
+  result = num/denom
+  return(result)
+}
+
+
+cumSE <- function(x, n){
+  m = mean(x)
+  num = sqrt(cumsum((x - m)^2))
+  denom = 1:n
+  result = num/denom ## cummulative mean of (x_i - theta)^2
+  return(result)
+}
+
+thetas = cumMean(g_values, N)
+SE = cumSE(g_values, N)
+
+plot(x = 1:N, y = thetas, type = "l", ylim = c(2, 10), xlab = "Number of Samples",
+     ylab = "Estimate of theta",
+     main = "Estimate of Theta with 95% CI")
+lines(x = 1:N, y = thetas + 1.96*SE, col = "red") ## CI
+lines(x = 1:N, y = thetas - 1.96*SE, col = "red") ## CI
+
+```
+
+
+
+
+
+
 
 
 
