--- a/Module 2/Generating Random Variables.Rmd
+++ b/Module 2/Generating Random Variables.Rmd
@@ -253,6 +253,108 @@ hist(results, probability = TRUE)
 ```
 
 
+
+
+\newpage
+\clearpage
+
+
+
+## Accept-Reject
+
+
+For notes on the Accept-Rejection algorithm see [Accept-Reject](http://www.columbia.edu/~ks20/4703-Sigman/4703-07-Notes-ARM.pdf)
+
+Suppose that $X$ and $Y$ are random variables with density (or pmf) $f$ and $g$ respectively, and there exists a constant $M$ such that
+
+$$
+\frac{f(t)}{g(t)} \leq M
+$$
+for all t such that $f(t) > 0$. If we'd like to simulate from the target density $f(t)$, then the following algorithm can be applied to generate the random variable $X$.
+
+### The Accept-Reject Algorithm
+
+1. Generate $Y \sim g_Y(t)$ and $U \sim Unif(0,1)$
+
+2. If $U \leq \frac{f(Y)}{M \times g(Y)}$ then we accept $Y$, such that $Y =  X$
+
+3. Repeat until you have sufficient samples
+
+
+
+In order for the algorithm to work we require the following constraings:
+
+1. $f$ and $g$ have to have compatible supports (i.e. $g(x) > 0$ when $f(x) > 0$)
+
+2. There is a constant $M$ such that $\frac{f(t)}{g(t)} \leq M$
+
+
+
+### Example: Beta(2,2)
+
+Supposed we'd like to generate 1,000 samples from $Beta(2,2)$, $f$. The density function for $Beta(2,2)$ is simply $f(x) = 6x(1 - x)$ for $0 < x < 1$. Since our domain is between 0 and 1, we can use a simple $Unif(0,1)$ density as our instrumental density, $g$. Then, by the accept-reject algorithm we can simulate a random variable $Y \sim g$, and a random variable $U \sim Unif(0,1)$. Then, if 
+$$
+U \leq \frac{f(Y)}{M \times g(Y)}
+$$
+we accept the candidate variable $Y \sim g$ as $X$, $X = Y$. Otherwise, we reject $Y$ and simulate again until we get an appropriate sample size. Note that the target density $f$ has a maximum of 1.5, so we can set M = 1.5; see: [Max of Beta(2,2)](http://www.wolframalpha.com/input/?i=max+6x(1+-+x))
+
+First, we'll generate 5 samples
+```{r}
+## Accept-Reject
+M = 1.5
+X = rep(x = NA, 5) ## create a vector of length 5 of NAs
+set.seed(123)
+f <- function(x){ 6*x*(1 - x)} ## pdf of Beta(2,2)
+g <- function(x){ 1 } ## pdf of Unif(0,1) is just 1
+
+for(i in 1:5){
+  print(paste("Run: ", i))
+  u = runif(1)
+  print(u)
+  y = runif(1)
+  print(y)
+  accept <- u <= f(y)/(M* g(y))
+  print(paste("Accept? ", accept))
+  if(accept){
+    X[i] <- y
+  }
+  
+}
+
+print(X)
+
+
+
+```
+
+
+
+Now, say we needed 10,000 samples from $Beta(2,2)$, then a better implementation would be
+
+```{r}
+X = rep(NA, 10000)
+M = 1.5
+i = 0 ## index set to start at 0
+while(sum(is.na(X))){
+  U = runif(1)
+  Y = runif(1)
+  accept <- U <= f(Y)/(M*g(Y))
+  #print(paste("Accept? ", accept))
+  if(accept){
+    i = i+1 ## update the index
+    X[i] <- Y
+  }
+}
+
+
+hist(X, xlab = "X", main = "Beta(2,2) from Accept-Reject algorithm")
+#beta <- function(x) 6*x*(1-x)
+#curve(expr = beta, from = 0, to = 1)
+
+```
+
+
+
 \newpage
 \clearpage
 
@@ -356,6 +458,12 @@ sqrt(pi/2) ## theoretical mean
 mean(R_Out) ## calculated mean
 
 ```
+
+
+
+
+
+
 
 
 
